# python_inquiror_info

./: .env.example  .gitignore  .servers  .servers.examples  README.md  install.sh  main.py  pyproject.toml  requirements.txt
client_infs/: __init__.py  cli.py
client_infs/config/: settings.py
client_infs/services/: client_service.py  quick_pass_service.py  server_service.py
client_infs/ui/: client_flows.py  menus.py  quick_pass_flows.py  servers_flows.py
client_infs/utils/: ui_helpers.py
