[project]
name = "client_infs"
version = "0.1.0"
description = "Aplicacion de consola para gestionar tareas en INFOSIS"
readme = "README.md"
requires-python = ">=3.10.12"
authors = [
    { name = "INFOSIS Team" }
]
keywords = ["infosis", "cliente", "consola", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.31.0",
    "click>=8.1.0",
    "python-dotenv>=1.1.1",
    "inquirerpy>=0.3.4",
    "selenium>=4.34.0",
    "pyperclip>=1.8.2"
]

[project.scripts]
inf = "client_infs.cli:main"
quick = "client_infs.ui.quick_pass_flows:fichar_flow"
connect = "client_infs.ui.servers_flows:connect"
restart= "client_infs.ui.servers_flows:restart"
srvinf = "client_infs.ui.servers_flows:show_info"

[project.urls]
Repository = "https://github.com/joalvarezdev/pyme"
Issues = "https://github.com/joalvarezdev/pyme/issues"

[tool.setuptools.packages.find]
include = ["client_infs*"]
exclude = ["logs*", "tests*"]
